# gaussian-open-systems

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
.virtual_documents/scripts/validation/: initial_state_validation.ipynb
docs/: conf.py  examples.md  index.rst  quickstart.md
docs/.ipynb_checkpoints/: conf-checkpoint.py
docs/_build/: api.html  concepts.html  examples.html  genindex.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/.doctrees/: api.doctree  concepts.doctree  environment.pickle  examples.doctree  index.doctree  quickstart.doctree
docs/_build/.ipynb_checkpoints/: api-checkpoint.html  concepts-checkpoint.html  examples-checkpoint.html  index-checkpoint.html  quickstart-checkpoint.html
docs/_build/_sources/: api.rst.txt  examples.md.txt  quickstart.md.txt
docs/_build/doctrees/: api.doctree  concepts.doctree  environment.pickle  examples.doctree  index.doctree  (+1 more)
notebooks/: 01_validation_two_mode_squeezing_under_loss.ipynb  02_markov_common_bath_baseline.ipynb  03_ou_pseudomode_embedding_showcase.ipynb
scripts/experiments/: Dissertation_Shared_Environment_Entanglement.ipynb
scripts/validation/: 03_systems_function_validation.ipynb  04_metrics_function_validation.ipynb  Untitled.ipynb  conventions_validation.ipynb  initial_state_validation.ipynb  two_mode_squeeze_under_thermal_loss.ipynb
src/gaussian_open_systems.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gaussian_systems/: _validation.py  conventions.py  inital_state.py  initial_state.py  metrics.py  solution.py  systems.py
(+23 files in other folders)
